<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerPacienteActivity"
    >
    <include layout="@layout/toolbar"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rut"
                android:textSize="@dimen/tamanioLetra1"
                android:layout_margin="@dimen/marginTvVerExamen"

                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rut_paciente_tv"
                android:textAlignment="center"
                android:textSize="@dimen/tamanioLetraVerExamen"
                android:textColor="@color/primary_text"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_y_apellido"
                android:layout_margin="@dimen/marginTvVerExamen"
                android:textSize="@dimen/tamanioLetra1"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombre_paciente_tv"
                android:textAlignment="center"
                android:textSize="@dimen/tamanioLetraVerExamen"
                android:textColor="@color/primary_text"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_del_ex_men"
                android:layout_margin="@dimen/marginTvVerExamen"
                android:textSize="@dimen/tamanioLetra1"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fecha_examen_tv"
                android:textSize="@dimen/tamanioLetraVerExamen"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rea_de_trabajo"
                android:layout_margin="@dimen/marginTvVerExamen"
                android:textSize="@dimen/tamanioLetra1"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/area_trabajo_tv"
                android:textAlignment="center"
                android:textSize="@dimen/tamanioLetraVerExamen"
                android:textColor="@color/primary_text"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/presenta_s_ntomas_de_covid"
                android:textSize="@dimen/tamanioLetra1"
                android:layout_margin="@dimen/marginTvVerExamen"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sintomas_tv"
                android:textSize="@dimen/tamanioLetraVerExamen"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/presenta_tos"
                android:textSize="@dimen/tamanioLetra1"
                android:layout_margin="@dimen/marginTvVerExamen"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tos_tv"
                android:textSize="@dimen/tamanioLetraVerExamen"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperatura"
                android:textSize="@dimen/tamanioLetra1"
                android:layout_margin="@dimen/marginTvVerExamen"

                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/temperatura_tv"
                android:textAlignment="center"
                android:textSize="@dimen/tamanioLetraVerExamen"
                android:textColor="@color/primary_text"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/presi_n_arterial"
                android:textSize="@dimen/tamanioLetra1"
                android:layout_margin="@dimen/marginTvVerExamen"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/presion_tv"
                android:textAlignment="center"
                android:textSize="@dimen/tamanioLetraVerExamen"
                android:layout_marginBottom="30dp"
                android:textColor="@color/primary_text"
                ></TextView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>